2006-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el (jit-lock-fontify-now): Don't fontify the empty text.
	(jit-lock-fontify-again): Don't refontify text that's not displayed.

2006-09-26  Kenichi Handa  <handa@m17n.org>

	* startup.el (display-splash-screen): Allow a prefix argument.

2006-09-25  Jason Rumney  <jasonr@gnu.org>

	* subr.el (shell-quote-argument): Use DOS logic for Windows
	shells with DOS semantics.

2006-09-24  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-finish): Handle corner case for fields in
	continued lines.
	(line-move-1): Remove flawed test for that case.

2006-09-24  Ken Manheimer  <ken.manheimer@gmail.com>

	* icomplete.el (icomplete-simple-completing-p): Use the correct
	name for the new variable, `icomplete-with-completion-tables'.
	(file local variables): Remove superfluous setting.

2006-09-23  Jeff Miller  <jmiller@cablespeed.com>  (tiny change)

	* calendar/appt.el (appt-check): Fix typo for appointments just
	after midnight.

2006-09-23  Chong Yidong  <cyd@stupidchicken.com>

	* help.el (describe-key-briefly, describe-key): Don't expect an
	extra up event if a down-event is generated by a popup menu.

2006-09-23  Michal Nazarewicz  <mnazarewicz@gmail.com> (tiny change)

	* textmodes/ispell.el (ispell-change-dictionary): Don't check the
	local dictionary when changing the global dictionary.

2006-09-23  Ken Manheimer  <ken.manheimer@gmail.com>

	* icomplete.el (icomplete-with-completion-tables): List of
	specialized completion tables with which icomplete should
	operate.  Include the new `internal-complete-buffer', so icomplete
	works with interactive buffer-selection.
	(icomplete-simple-completing-p): Add acceptance of specialized
	completion tables listed in icomplete-with-completion-tables.

2006-09-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.el (focus-follows-mouse): Set default to nil on Mac.

	* startup.el (command-line): Use `custom-reevaluate-setting' for